--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,11 +34,9 @@
           </div>
           
           <nav>
-            <a href="{{ site.baseurl }}/">Notícias</a>
             <a href="https://manjaro-linux.com.br/">Fórum</a>
             <a href="http://sourceforge.net/projects/manjarolinux/files">Baixar</a>
-
-            <a href="{{ site.baseurl }}/sobre-o-projeto">Sobre o Projeto</a>
+            <a href="{{ site.baseurl }}/sobre-o-projeto">Sobre</a>
           </nav>
         </header>
       </div>
