--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,10 @@
           </div>
           
           <nav>
+            <a href="{{ site.baseurl }}/">Início</a>
+            <a href="{{ site.baseurl }}/sobre-o-projeto">Sobre</a>
             <a href="https://manjaro-linux.com.br/">Fórum</a>
             <a href="http://sourceforge.net/projects/manjarolinux/files">Baixar</a>
-            <a href="{{ site.baseurl }}/sobre-o-projeto">Sobre</a>
           </nav>
         </header>
       </div>
