formato da data...
Signed-off-by: Rafael Neri <rafepel@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
-          <p>Todas as marcas são de propriedade de seus respectivos donos.</p>
+          <p>Todas as marcas registradas são de propriedade de seus respectivos donos.</p>
         </footer>
       </div>
     </div>
