--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,6 @@ layout: default
   </div>
 
   <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+    Postado em {{ page.date | date: "%D" }}
   </div>
 </article>
