--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,6 @@ layout: default
   </div>
 
   <div class="date">
-    Postado em {{ page.date | date: "%D" }}
+    Postado em {{ page.date | date: "%d/%m/%Y" }}
   </div>
 </article>
