--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Início</a>
             <a href="{{ site.baseurl }}/sobre-o-projeto">Sobre</a>
-            <a href="https://manjaro-linux.com.br/">Fórum</a>
+            <a href="http://manjaro-linux.com.br/">Fórum</a>
             <a href="http://sourceforge.net/projects/manjarolinux/files">Baixar</a>
           </nav>
         </header>
